changement du manifest

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <title>Pause Extension</title>
     <link rel="stylesheet" href="popup.css">
