--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 -->
     
     <!--Boutons start, stop et reset
-        <button onclick="stop()" class="btn">Stop</button>
+    <button onclick="stop()" class="btn">Stop</button>
     <button onclick="reset()" class="btn">Reset</button>
     <br />
 -->
@@ -26,9 +26,9 @@
         <h2 class="span">Screen Minutes</h2>
         <div class="screenTime">
             <!--Regler le timer Ecran-->
-           <button id="downS" class="btn">&lt;</button>
-           <h1 id="timeS"></h1> 
-           <button id="upS" class="btn">&gt;</button> 
+            <button id="downS" class="btn">&lt;</button>
+            <h1 id="timeS"></h1> 
+            <button id="upS" class="btn">&gt;</button> 
         </div>
         <div class="illustration">
             <img class="img"src="https://i.pinimg.com/564x/1e/6a/8f/1e6a8fbcc777b4113524f9861922b0d1.jpg" alt="coffee">
@@ -38,15 +38,23 @@
         <div class="breakTime">
             <!--Regler le timer Break-->
             <button id="downB" class="btn">&lt;</button>
-           <h1 id="timeB"></h1> 
-           <button id="upB" class="btn">&gt;</button> 
+            <h1 id="timeB"></h1> 
+            <button id="upB" class="btn">&gt;</button> 
         </div>
         <button onclick="start()" class="btn" id="startBtn">Start</button><br>
+
+        <!-- Ajout du bouton et de la zone d'affichage pour le mode Ne pas déranger -->
+        <div id="dndContainer">
+            <button onclick="toggleDndMode()" class="btn" id="dndButton">Mode Ne pas déranger</button>
+        </div>
     </div>
     
     <!--Script du timer qui défile-->
     <script src="timer.js"></script>
     <!--Script des boutons pour choisir le temps des timers-->
     <script src="button.js"></script>
+    <!--Script pour le mode Ne pas déranger-->
+    <script src="dnd.js"></script>
+    <script src="brightness.js"></script>
 </body>
 </html>
