Fonction brightness ajouté au html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <script src="button.js"></script>
     <!--Script pour le mode Ne pas déranger-->
     <script src="dnd.js"></script>
-    <script src="brightness.js"></script>
+    <script src="brightnessControl.js"></script>
 </body>
 </html>
