modification timer.js

--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
     <!--Script pour le mode Ne pas déranger-->
     <script src="dnd.js"></script>
     <script src="brightnessControl.js"></script>
+    <!--Script pour remplacer la page (ajout Tijana)-->
+    <script src="app.js"></script>
 </body>
 </html>
