--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
     <!--Script pour le mode Ne pas déranger-->
     <!--<script src="dnd.js"></script>-->
     <script src="brightnessControl.js"></script>
-    <!--Script pour remplacer la page (ajout Tijana)-->
+    <!--Script pour remplacer la page-->
 
     <script src="popup.js"></script>
+    <script src="background.js"></script>
  
     
 </body>
