--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,9 +22,12 @@
         <br />
 
         <button class="btn" id="startBtn">Start</button><br>
-        <script src="popup.js"></script>
     </div>
-
+    <div class="blur">
+        <button class="btn" id="stopBlur">stopBlur</button>
+    </div>
+    
+    <script src="popup.js"></script>
 </body>
 
 </html>
