--- a/timeData/timer.html
+++ b/timeData/timer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta charset="UTF-8">
     <title>Pause Extension</title>
     <link rel="stylesheet" href="timer.css">
 </head>
@@ -10,7 +11,7 @@
         <h1> Prenez un cafe <span>☕</span></h1>
         <h2 class="span">Screen Minutes</h2>
         <div class="illustration">
-            <img class="img"src="https://i.pinimg.com/564x/1e/6a/8f/1e6a8fbcc777b4113524f9861922b0d1.jpg" alt="coffee">
+            <img class="img" src="img/coffee.png" alt="coffee">
         </div>
         <div class="screenTime">
             <!--Regler le timer Ecran-->
